add sst